test/runtime/fail/import/undefined_import.hy

// expect error: Undefined import package

import "wefoij"
